# blaze

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.cpp  http_client.cpp  http_client.hpp  vcpkg.json
.github/workflows/: ci.yml  cmake-multi-platform.yml  cmake.yml  codeql-analysis.yml
blaze/blaze/: main.cpp
blaze/blaze.xcodeproj/: project.pbxproj
blaze/blaze.xcodeproj/project.xcworkspace/xcuserdata/irfan.xcuserdatad/: UserInterfaceState.xcuserstate
blaze/blaze/lib/: blaze.h
examples/: main.cpp
lib/: blaze.hpp  concepts.hpp  http_client.cpp  http_client.hpp  task.hpp  types.hpp
src/demo/: LinearEquation.cc
tests/: test_http_client.cpp
